2006-12-18  Sergey Poznyakoff  <gray@gnu.org.ua>

	* lib/Makefile.tmpl, lib/bcopy.c, lib/mkdir.c, lib/strdup.c,
	lib/strerror.c, lib/.cvsignore, po/.cvsignore,
	po/Makevars: Removed
	* lib/Makefile.am: New file
	* po/POTFILES.in: Update
	* bootstrap: Synch with tar.
	* configure.ac: Update
	* gnulib.modules: Add lchown, strerror
	* src/Makefile.am: Update
	* src/main.c, src/mt.c: Include rmt-command.h instead of localedir.h

	* src/util.c (sparse_write): Static.  Provide a forward
	declaration. Define enum sparse_write_states inside the function.

	* src/copyin.c (long_format): Use PRIuMAX for printing file size
	* src/copyout.c (write_out_binary_header): Fix size conversion
	* src/extern.h (tape_toss_input, warn_if_file_changed): Last
	argument is off_t
	* src/util.c (tape_toss_input, warn_if_file_changed): Last
	argument is off_t
	(warn_if_file_changed): Use ngettext

2006-11-15  Sergey Poznyakoff  <gray@gnu.org.ua>

	* src/copypass.c: Fix setting output file permissions

2006-11-13  Sergey Poznyakoff  <gray@gnu.org.ua>

	* doc/cpio.texi: Consistently use @option{} for displaying command
	line options.
	Fix formatting in "Invoking `cpio'" section
	* src/main.c (process_args): Fix usage error diagnostics in
	copy-pass mode.

2006-10-24  Sergey Poznyakoff  <gray@gnu.org.ua>

	* src/copyout.c (process_copy_out): Add terminating zero to the
	link_name.

	* tests/symlink.at: New testcase
	* tests/Makefile.am: New test symlink.at
	* tests/inout.at: Add keywords
	* tests/testsuite.at (AT_SKIP_TEST): New macro
	New test symlink.at

2006-10-21  Sergey Poznyakoff  <gray@gnu.org.ua>

	* configure.ac, NEWS: Version 2.7
	* gnulib.modules: Add stdint
	* src/util.c: Use STRINGIFY_BIGINT to display num_bytes

2006-09-27  Sergey Poznyakoff  <gray@gnu.org.ua>

	* TODO: Update
	* README-alpha: Update
	* bootstrap: Imported from tar
	* configure.ac: Require autoconf 2.59 and gettext 1.15
	* gnulib.modules: add inttypes
	* doc/cpio.texi: Minor fixes