@@ -1,20 +1,0 @@
-Makefile
-Makefile.in
-Makefile.in.in
-Makevars
-Makevars.template
-POTFILES
-LINGUAS
-Rules-quot
-boldquot.sed
-en@boldquot.header
-en@quot.header
-insert-header.sin
-cpio.pot
-quot.sed
-remove-potcdate.sin
-remove-potcdate.sed
-stamp-po
-*.mo
-*.gmo
-*.po
